Fixed uneven margins

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,6 @@
 .About {
   /* background-color: maroon; */
+  margin-bottom: 5rem;
   width: 100%;
   height: 55rem;
   display: flex;
@@ -11,7 +12,6 @@
 }
 
 .About-title {
-  margin-top: 0;
   color: #74F9D9;
   font-size: 3rem;
   font-weight: 300;
@@ -21,6 +21,7 @@
 
 .About-box {
   /* width: 0%; */
+  margin-bottom: 5%;
   width: 80%;
   /* background-color: yellow; */
   margin-left: 8%;
@@ -28,7 +29,7 @@
 
 .about-arrows {
   position: absolute;
-  top: 50%;
+  top: 42.5%;
   left: 92%;
   color: white;
   font-size: 2.5rem;
@@ -36,7 +37,7 @@
 
 .about-Larrow {
   position: absolute;
-  top: 50%;
+  top: 42.5%;
   left: -8%;
   color: white;
   font-size: 2.5rem;
