--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -12,7 +12,7 @@
 }
 .Contact-Larrow {
   position: absolute;
-  top: 50%;
+  top: 42.5%;
   left: -8%;
   color: white;
   font-size: 2.5rem;
