--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -23,7 +23,7 @@
 .project-Larrow {
   overflow: auto;
   position: absolute;
-  top: 50%;
+  top: 42.5%;
   left: -8%;
   color: white;
   font-size: 2.5rem;
